--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@ a {
 body {
   line-height: 1.4;
   font-size: 14px;
-  color: #272727;
+  color: black;
   overflow-x: hidden;
   background: #fff;
   position: initial !important;
